Refactor DirSelectorCmpImpl.java.